# goldeneye

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  package.json  pnpm-lock.yaml  railway.json
apps/api/: .env.example  Dockerfile  _b5_golden_capture.py  alembic.ini  pyproject.toml
apps/api/adapters/: _http.py  base.py  registry.py
apps/api/auth/: clerk.py  deps.py
apps/api/db/: engine.py  session.py
apps/api/realtime/: delayed_quote_poller.py  gateway.py  ticker.py
apps/api/repos/: adapter_runs.py  alerts.py  contracts.py  cot.py  eia.py  forecasts.py  instruments.py  journal.py  ledger.py  news.py  paper_trades.py  price_bars.py  scenarios.py  theses.py  users.py
apps/api/routers/: admin.py  backtest.py  calibration.py  chart.py  dashboard.py  explain.py  forecast.py  fundamentals.py  indicators.py  instruments.py  journal.py  ledger.py  me.py  news.py  paper.py  patterns.py  positioning.py  realtime.py  scenarios.py  signal_quality.py  signals.py  thesis.py  ticker.py
apps/api/seeds/: _backfill_cl_prices.py  _run_seed_cl.py  backfill_prices.py  cot_generator.py  demo.py  demo_desk_analysts.py  demo_sample_analyst.py  demo_sample_desk.py  example_cl_journal_and_trades.py  example_forecasts.py  example_journal_and_trades.py  load_fixtures.py  price_generator.py  refresh_backtests.py  storage_generator.py  validate.py  validate_direction_real.py  validate_engine_oos.py  validate_estimator_30b.py  validate_vol_real.py  weather_generator.py
apps/api/services/: asset_config.py  auto_resolution.py  backtest.py  calibration.py  (+27 more)
(+466 files in other folders)
